--- a/youtube.html
+++ b/youtube.html
@@ -5,15 +5,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>YouTube.com Clone</title>
-    <link rel="stylesheet" href="../Styles/video.css">
-    <link rel="stylesheet" href="../Styles/header.css">
-    <link rel="stylesheet" href="../Styles/general.css">
-    <link rel="stylesheet" href="../Styles/sidebar.css">
+    <link rel="stylesheet" href="clone/Styles/video.css">
+    <link rel="stylesheet" href="clone/Styles/header.css">
+    <link rel="stylesheet" href="clone/Styles/general.css">
+    <link rel="stylesheet" href="clone/Styles/sidebar.css">
   </head>
   <body>
     <header class="header">
       <div class="left-section">
-        <img class="ham-menu" src="../images/icons/hamburger-menu.svg" alt="">
+        <img class="ham-menu" src="images/icons/hamburger-menu.svg" alt="">
         <img class="youtube-logo" src="images/icons/youtube-logo.svg" alt="">
       </div>
       <div class="middle-section">
